--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,14 @@ body {
     height: 102px;
     margin-top: 50px;
 }
+
+/* After applying Bootstrap, 
+gems still needed to be centered and resized for small viewport. */
+@media (max-width: 591px) {
+    .gem {
+        display: block;
+        margin: 0px auto 20px auto;
+        width: 80px;
+        height: 51px;
+    }
+}
